--- a/css/map.css
+++ b/css/map.css
@@ -1,9 +1,11 @@
 
-#mapWrapper {
-  margin: 300px;
+#viewport {
+/*margin: 300px;*/
   width:800px;
-  height:400px;
+  height:600px;
   overflow:hidden;
+  /*position: relative;*/
+  border: 3px solid #555;
   border:1px solid black;
 }
 
@@ -19,54 +21,70 @@
   -o-transition: all .3s ease-out;
   transition: all .3s ease-out;
   cursor: move;
+  /*position: relative;
+  left: -400px;
+  top: -200px;   */ 
+  -moz-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  -o-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+}
+
+#crosshairs{
+  position: absolute;
+  left: 250px;
+  top: 150px;
+  z-index: 5000;
+  pointer-events: none;
 }
 
 #map.zoom1 .mapRoot {
-  -moz-transform: scale(1);
-  -webkit-transform: scale(1);
-  -o-transform: scale(1);
-  transform: scale(1);
-  -ms-transform: scale(1);
+  -moz-transform: scale(1,1);
+  -webkit-transform: scale(1,1);
+  -o-transform: scale(1,1);
+  transform: scale(1,1);
+  -ms-transform: scale(1,1);
 }
 
 #map.zoom1 .mapRoot .planets img {
-  -moz-transform: scale(1);
-  -webkit-transform: scale(1);
-  -o-transform: scale(1);
-  transform: scale(1);
-  -ms-transform: scale(1);
+  -moz-transform: scale(1,1);
+  -webkit-transform: scale(1,1);
+  -o-transform: scale(1,1);
+  transform: scale(1,1);
+  -ms-transform: scale(1,1);
 }
 
 #map.zoom2 .mapRoot {
-  -moz-transform: scale(2);
-  -webkit-transform: scale(2);
-  -o-transform: scale(2);
-  transform: scale(2);
-  -ms-transform: scale(2);
+  -moz-transform: scale(2,2);
+  -webkit-transform: scale(2,2);
+  -o-transform: scale(2,2);
+  transform: scale(2,2);
+  -ms-transform: scale(2,2);
 }
 
 #map.zoom2 .mapRoot .planets img {
-  -moz-transform: scale(0.5);
-  -webkit-transform: scale(0.5);
-  -o-transform: scale(0.5);
-  transform: scale(0.5);
-  -ms-transform: scale(0.5);
+  -moz-transform: scale(0.5,0.5);
+  -webkit-transform: scale(0.5,0.5);
+  -o-transform: scale(0.5,0.5);
+  transform: scale(0.5,0.5);
+  -ms-transform: scale(0.5,0.5);
 }
 
 #map.zoom3 .mapRoot {
-  -moz-transform: scale(4);
-  -webkit-transform: scale(4);
-  -o-transform: scale(4);
-  transform: scale(4);
-  -ms-transform: scale(4);
+  -moz-transform: scale(4,4);
+  -webkit-transform: scale(4,4);
+  -o-transform: scale(4,4);
+  transform: scale(4,4);
+  -ms-transform: scale(4,4);
 }
 
 #map.zoom3 .mapRoot .planets img {
-  -moz-transform: scale(0.25);
-  -webkit-transform: scale(0.25);
-  -o-transform: scale(0.25);
-  transform: scale(0.25);
-  -ms-transform: scale(0.25);
+  -moz-transform: scale(0.25,0.25);
+  -webkit-transform: scale(0.25,0.25);
+  -o-transform: scale(0.25,0.25);
+  transform: scale(0.25,0.25);
+  -ms-transform: scale(0.25,0.25);
 }
 
 #map.zoom4 {
