--- a/css/map.css
+++ b/css/map.css
@@ -51,134 +51,22 @@
   pointer-events: none;
 }
 
-#map.zoom1 .mapRoot {
-  -moz-transform: scale(1,1);
-  -webkit-transform: scale(1,1);
-  -o-transform: scale(1,1);
-  transform: scale(1,1);
-  -ms-transform: scale(1,1);
-}
-
-#map.zoom1 .mapRoot .planets img {
-  -moz-transform: scale(1,1);
-  -webkit-transform: scale(1,1);
-  -o-transform: scale(1,1);
-  transform: scale(1,1);
-  -ms-transform: scale(1,1);
-}
-
-#map.zoom2 .mapRoot {
-  -moz-transform: scale(2,2);
-  -webkit-transform: scale(2,2);
-  -o-transform: scale(2,2);
-  transform: scale(2,2);
-  -ms-transform: scale(2,2);
-}
-
-#map.zoom2 .mapRoot .planets img {
-  -moz-transform: scale(0.5,0.5);
-  -webkit-transform: scale(0.5,0.5);
-  -o-transform: scale(0.5,0.5);
-  transform: scale(0.5,0.5);
-  -ms-transform: scale(0.5,0.5);
-}
-
-#map.zoom3 .mapRoot {
-  -moz-transform: scale(4,4);
-  -webkit-transform: scale(4,4);
-  -o-transform: scale(4,4);
-  transform: scale(4,4);
-  -ms-transform: scale(4,4);
-}
-
-#map.zoom3 .mapRoot .planets img {
-  -moz-transform: scale(0.25,0.25);
-  -webkit-transform: scale(0.25,0.25);
-  -o-transform: scale(0.25,0.25);
-  transform: scale(0.25,0.25);
-  -ms-transform: scale(0.25,0.25);
-}
-
-#map.zoom4 {
-  -moz-transform: scale(8);
-  -webkit-transform: scale(8);
-  -o-transform: scale(8);
-  transform: scale(8);
-  -ms-transform: scale(8);
-}
-
-#map.zoom5 {
-  -moz-transform: scale(16);
-  -webkit-transform: scale(16);
-  -o-transform: scale(16);
-  transform: scale(16);
-  -ms-transform: scale(16);
-}
-
-
-#map.zoom5 .planets img {
-  -moz-transform: scale(0.625);
-  -webkit-transform: scale(0.625);
-  -o-transform: scale(0.625);
-  transform: scale(0.625);
-  -ms-transform: scale(0.625);
-}
-
-#map.zoom6 {
-  -moz-transform: scale(32);
-  -webkit-transform: scale(32);
-  -o-transform: scale(32);
-  transform: scale(32);
-  -ms-transform: scale(32);
-}
-
-#map.zoom7 {
-  -moz-transform: scale(64);
-  -webkit-transform: scale(64);
-  -o-transform: scale(64);
-  transform: scale(64);
-  -ms-transform: scale(64);
-}
-
-#map.zoom8 {
-  -moz-transform: scale(128);
-  -webkit-transform: scale(128);
-  -o-transform: scale(128);
-  transform: scale(128);
-  -ms-transform: scale(128);
-}
-
-#map.zoom9 {
-  -moz-transform: scale(256);
-  -webkit-transform: scale(256);
-  -o-transform: scale(256);
-  transform: scale(256);
-  -ms-transform: scale(256);
-}
-
-#map.zoom10 {
-  -moz-transform: scale(512);
-  -webkit-transform: scale(512);
-  -o-transform: scale(512);
-  transform: scale(512);
-  -ms-transform: scale(512);
-}
-
 #map .planets .planet, #map  .system .sun, #map  .coords .coordPoint, #map  .sector .sectorPoint, #map  .system .systemPoint   {
   position: absolute;
   width: 80px;
   height: 80px;
+  cursor: pointer;
 }
 
 #map  .system .sun {
   pointer-events: none;
 }
 
-#map  .mapRoot.zoomOnPlanet .coords .coordPoint, #map  .mapRoot.zoomOnPlanet .system .systemPoint {
+#map  .mapRoot.zoomOnPlanet .system .systemPoint {
   display: none;
 }
 
-#map  .mapRoot.zoomOnPlanet .coords.unloaded .coordPoint, #map  .mapRoot.zoomOnPlanet .system.unloaded .systemPoint {
+#map  .mapRoot.zoomOnPlanet .system.unloaded .systemPoint {
   display: block;
 }
 
@@ -190,3 +78,30 @@
   display: none;
 }
 
+#map  .mapRoot.zoomOnPlanet .coords.unloaded .coordPoint {
+  background-position: 0px 0px;
+}
+
+#map  .mapRoot.zoomOnPlanet .coords .coordPoint {
+  background-position: -50px 0px;
+}
+
+#map  .system .sun {
+  z-index : 2;
+}
+
+#map .planets .planet {
+  z-index : 5;
+}
+
+#map  .coords .coordPoint {
+  z-index : 10;
+}
+
+#map  .sector .sectorPoint {
+  z-index : 15;
+}
+
+#map  .system .systemPoint {
+  z-index : 20;
+}
