--- a/css/map.css
+++ b/css/map.css
@@ -51,10 +51,12 @@
   pointer-events: none;
 }
 
+/*-------- Map elements -------------*/
+
 #map .planets .planet, #map  .system .sun, #map  .coords .coordPoint, #map  .sector .sectorPoint, #map  .system .systemPoint   {
   position: absolute;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   cursor: pointer;
 }
 
@@ -90,6 +92,11 @@
   z-index : 10;
 }
 
+#map  .coords  .coordPoint.pc {
+  width: 80px;
+  height: 80px;
+}
+
 #map  .coords  .coordPoint.extended {
   width: 150px;
   height: 110px;
@@ -104,4 +111,18 @@
   z-index : 20;
   width: 130px;
   height: 110px;
+}
+
+/*-------- Lines -------------*/
+
+#lines .line {
+  position: absolute;
+  width: 3px;
+  background-color: #06a;
+  z-index: 100;
+  -webkit-transform-origin: top left;
+  -moz-transform-origin: top left;
+  -o-transform-origin: top left;
+  -ms-transform-origin: top left;
+  transform-origin: top left;
 }
