--- a/css/map.css
+++ b/css/map.css
@@ -53,11 +53,17 @@
 
 /*-------- Map elements -------------*/
 
-#map .planets .planet, #map  .system .sun, #map  .coords .coordPoint, #map  .sector .sectorPoint, #map  .system .systemPoint   {
+#map .planets .planet, #map  .coords .coordPoint, #map  .sector .sectorPoint, #map  .system .systemPoint   {
   position: absolute;
-  width: 50px;
-  height: 50px;
+  /*width: 50px;
+  height: 50px;*/
   cursor: pointer;
+}
+
+#map  .coords  .coordPoint.pc, #map  .system .sun {
+  position: absolute;
+  /*width: 80px;
+  height: 80px;*/
 }
 
 #map  .system .sun {
@@ -92,10 +98,6 @@
   z-index : 10;
 }
 
-#map  .coords  .coordPoint.pc {
-  width: 80px;
-  height: 80px;
-}
 
 #map  .coords  .coordPoint.extended {
   width: 150px;
