--- a/css/map.css
+++ b/css/map.css
@@ -10,7 +10,6 @@
   width:800px;
   height:600px;
   overflow:hidden;
-  /*position: relative;*/
   border: 3px solid #555;
   border:1px solid black;
   background: black;
@@ -71,7 +70,7 @@
   pointer-events: none;
 }
 
-#map  .mapRoot.zoomOnPlanet .coords .coordPoint.extended, #map .mapRoot .coords.unloaded .coordPoint.pc, #map  .mapRoot.zoomOnPlanet .system .systemPoint {
+#map  .mapRoot.zoomOnPlanet .coords .coordPoint.extended, #map .mapRoot .coords.unloaded .coordPoint.pc, #map  .mapRoot.zoomOnPlanet .system .systemPoint, #map  .mapRoot.zoomOnPlanet #svgRoot #stars {
   display: none;
 }
 
