--- a/css/map.css
+++ b/css/map.css
@@ -78,11 +78,11 @@
   display: block;
 }
 
-#map  .mapRoot.zoomOnCoords .coords .coordPoint.pc, #map  .mapRoot.zoomOnCoords .planets, #map  .mapRoot.zoomOnCoords .system .systemPoint {
+#map  .mapRoot.zoomOnCoords .coords .coordPoint.pc, #map  .mapRoot.zoomOnCoords .planets, #map  .mapRoot.zoomOnCoords .system .systemPoint, #map  .mapRoot.zoomOnCoords #svgRoot #lines {
   display: none;
 }
 
-#map  .mapRoot.zoomOnSystem .planets, #map  .mapRoot.zoomOnSystem .coords {
+#map  .mapRoot.zoomOnSystem .planets, #map  .mapRoot.zoomOnSystem .coords, #map  .mapRoot.zoomOnSystem #svgRoot #lines {
   display: none;
 }
 
