--- a/css/map.css
+++ b/css/map.css
@@ -104,6 +104,10 @@
   height: 110px;
 }
 
+#map  .coords .fleet {
+  z-index : 12;
+}
+
 #map  .sector .sectorPoint {
   z-index : 15;
 }
@@ -113,6 +117,15 @@
   z-index : 20;
   width: 130px;
   height: 110px;
+}
+
+#map .planet, #map .coordPoint, #map .systemPoint {
+  border-radius: 30px;
+}
+
+#map .planet:hover, #map .coordPoint:hover, #map .systemPoint:hover {
+  border-radius: 30px;
+  box-shadow: 0px 0px 5px 2px #ccc;
 }
 
 /*-------- Lines -------------*/
