--- a/css/map.css
+++ b/css/map.css
@@ -164,3 +164,40 @@
 .fleetStatic {
   pointer-events: none;
 }
+
+/*-------- Colorbox ------------*/
+#cboxOverlay.popininfo {
+  display: none !important;
+}
+
+
+#colorbox.popininfo #cboxContent { 
+
+
+  border-width: 3px solid grey; 
+  -moz-box-shadow: inset 0px 0px 100px 2px #96b5f9;
+  -webkit-box-shadow: inset 0px 0px 100px 2px #96b5f9;
+  -o-box-shadow: inset 0px 0px 100px 2px #96b5f9;
+  box-shadow: inset 0px 0px 100px 2px #96b5f9;
+  filter:progid:DXImageTransform.Microsoft.Shadow(color=#96b5f9, Direction=NaN, Strength=50);
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+
+  background: none repeat scroll 0 0 rgba(18, 51, 128, 0.7) !important;
+}
+
+#colorbox.popininfo.loading #cboxContent { 
+  background: url('../images/apocalypsis/bruit.gif') repeat scroll 0 0 rgba(0, 0, 0, 0.3) !important;
+}
+
+#colorbox.popininfo #cboxContent #cboxLoadedContent {
+  padding: 20px;
+}
+
+#cboxLoadingOverlay{ 
+  display:none;
+}
+#cboxLoadingGraphic{ 
+  display:none;
+}
