--- a/css/map.css
+++ b/css/map.css
@@ -188,6 +188,10 @@ html, body {
   font-size: 9px;
 }
 
+#map .planet:hover .name, #map .planet.active .name  {
+  padding-top: 15px;
+}
+
 /*#map .coords.unknown .coordPoint .coordPointImg, #map .system.unknown .systemPoint .systemPointImg {
   box-shadow: 0px 0px 5px 2px red;
 }*/
