--- a/css/map.css
+++ b/css/map.css
@@ -5,10 +5,10 @@
   pointer-events: none;
 }
 
-#viewport {
+#viewport, #viewport2 {
 /*margin: 300px;*/
-  width:1024px;
-  height:768px;
+  /*width:1024px;
+  height:768px;*/
   overflow:hidden;
   border: 3px solid #555;
   border:1px solid black;
@@ -30,20 +30,20 @@ html, body {
   overflow: visible;
 }
 
-#map {
-  -webkit-transition: all .3s ease-out;
+#map, #map2 {
+  /*-webkit-transition: all .3s ease-out;
   -moz-transition: all .3s ease-out;
   -o-transition: all .3s ease-out;
-  transition: all .3s ease-out;
+  transition: all .3s ease-out;*/
   cursor: move;
   /*position: relative;
   left: -400px;
   top: -200px;   */ 
-  -moz-transform-origin: 50% 50%;
+  /*-moz-transform-origin: 50% 50%;
   -ms-transform-origin: 50% 50%;
   -o-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
-  -ms-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;*/
 }
 
 #tools_wrapper {
