--- a/css/map.css
+++ b/css/map.css
@@ -13,6 +13,20 @@
   border: 3px solid #555;
   border:1px solid black;
   background: black;
+  
+	position: absolute;
+	left: 20px;
+	top: 20px;
+	bottom: 20px;
+	right: 240px;
+	border: 5px solid black;
+	cursor: default;
+
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;  
 }
 
 @font-face {
@@ -44,6 +58,16 @@ html, body {
   -o-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
   -ms-transform-origin: 50% 50%;*/
+	-webkit-transform-origin: left top;
+	-webkit-transform: translateZ(0);
+	-moz-transform-origin: left top;
+	-moz-transform: translateZ(0);
+	-ms-transform-origin: left top;
+	-ms-transform: translateZ(0);
+	-o-transform-origin: left top;
+	-o-transform: translateZ(0);
+	transform-origin: left top;
+	transform: translateZ(0);  
 }
 
 #tools_wrapper {
