--- a/css/map.css
+++ b/css/map.css
@@ -161,7 +161,13 @@ html, body {
 }
 
 #map .planet:hover .overlay, #map .planet.active .overlay {
-  background: url('../images/apocalypsis/planet_selected.gif') no-repeat 0 0 transparent;
+  background: url('../images/apocalypsis/planet_radar.png') no-repeat 0 0 transparent;  
+  opacity: 0.7;
+  -webkit-animation: pulsie-function 5s linear infinite, rotating-function 30s linear infinite; 
+     -moz-animation: pulsie-function 5s linear infinite, rotating-function 30s linear infinite; 
+      -ms-animation: pulsie-function 5s linear infinite, rotating-function 30s linear infinite; 
+       -o-animation: pulsie-function 5s linear infinite, rotating-function 30s linear infinite; 
+          animation: pulsie-function 5s linear infinite, rotating-function 30s linear infinite; 
   height: 80px;
   left: -15px;
   position: relative;
@@ -172,7 +178,15 @@ html, body {
 
 #map  .system .systemPoint:hover .overlay, #map  .system.active .systemPoint .overlay,
 #map  .system.unknown .systemPoint:hover .overlay, #map  .system.unknown.active .systemPoint .overlay {
-  background: url('../images/apocalypsis/system_selected.gif') no-repeat 0 0 transparent;
+  
+  background: url('../images/apocalypsis/system_radar.png') no-repeat 0 0 transparent;  
+  opacity: 0.7;
+  -webkit-animation: pulsie-function 5s linear infinite, rotating-function 30s linear infinite; 
+     -moz-animation: pulsie-function 5s linear infinite, rotating-function 30s linear infinite; 
+      -ms-animation: pulsie-function 5s linear infinite, rotating-function 30s linear infinite; 
+       -o-animation: pulsie-function 5s linear infinite, rotating-function 30s linear infinite; 
+          animation: pulsie-function 5s linear infinite, rotating-function 30s linear infinite; 
+  
   height: 130px;
   left: 0px;
   position: relative;
@@ -210,6 +224,7 @@ html, body {
 #map .planet .name {
   /*padding-top: 10px;*/
   font-size: 9px;
+  color: #ccc;
 }
 
 #map .planet:hover .name, #map .planet.active .name  {
@@ -298,4 +313,117 @@ html, body {
 }
 #cboxLoadingGraphic{ 
   display:none;
+}
+
+/*-------- Animations ------------*/
+
+@-webkit-keyframes rotating-function {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@-moz-keyframes rotating-function {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+  to {
+    -moz-transform: rotate(360deg);
+  }
+}
+@-ms-keyframes rotating-function {
+  from {
+    -ms-transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes pulsie-function {
+  0% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 0.1;
+  }
+  51% {
+    opacity: 0.4;
+  }
+  56% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 0.6;
+  }
+}
+@-moz-keyframes pulsie-function {
+  0% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 0.1;
+  }
+  51% {
+    opacity: 0.4;
+  }
+  56% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 0.6;
+  }
+}
+@-ms-keyframes pulsie-function {
+  0% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 0.1;
+  }
+  51% {
+    opacity: 0.4;
+  }
+  56% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 0.6;
+  }
+}
+
+@-webkit-keyframes blip-function {
+  0% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 0.7;
+  }
+}
+@-moz-keyframes blip-function {
+  0% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 0.7;
+  }
+}
+@-ms-keyframes blip-function {
+  0% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 0.7;
+  }
 }
