--- a/css/map.css
+++ b/css/map.css
@@ -410,8 +410,31 @@ span.ennemy, div.ennemy {
 #cboxLoadingOverlay{ 
   display:none;
 }
+
 #cboxLoadingGraphic{ 
   display:none;
+}
+
+#colorbox.popininfo .prevEntity, #colorbox.popininfo .nextEntity {
+  cursor: pointer;
+  border-radius: 5px;
+  width: 32px;
+  height: 32px;
+}
+
+#colorbox.popininfo .prevEntity:hover, #colorbox.popininfo .nextEntity:hover {
+  -moz-box-shadow: inset 0px 0px 10px 2px #FFA500;
+  -webkit-box-shadow: inset 0px 0px 10px 2px #FFA500;
+  -o-box-shadow: inset 0px 0px 10px 2px #FFA500;
+  box-shadow: inset 0px 0px 10px 2px #FFA500;
+  filter:progid:DXImageTransform.Microsoft.Shadow(color=#FFA500, Direction=NaN, Strength=10);
+}
+
+#colorbox.popininfo #cboxTitle .title {
+  position: relative;
+  top: -8px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 /*-------- Animations ------------*/
