--- a/css/map.css
+++ b/css/map.css
@@ -1,10 +1,4 @@
 
-/* TODO : only for tests */
-#target {
-  position: absolute;
-  pointer-events: none;
-}
-
 #backgroundWrap {
   background: transparent;
   position: absolute;
@@ -14,7 +8,7 @@
 }
 
 #backgroundImage {
-  background: url('../images/apocalypsis/background7.jpg') repeat 0 0 black;
+  background: url('../images/apocalypsis/background.jpg') repeat 0 0 black;
   position: relative;
   pointer-events: none; 
   /*left: -300px;
@@ -370,6 +364,7 @@ span.ennemy, div.ennemy {
 }
 
 #cboxWrapper {
+  background: url("../images/apocalypsis/circuit.jpg") repeat scroll 0 0 rgba(0, 0, 0, 0);
   -moz-box-shadow: inset 0px 0px 30px 15px #cfcfcf;
   -webkit-box-shadow: inset 0px 0px 30px 15px #cfcfcf;
   -o-box-shadow: inset 0px 0px 30px 15px #cfcfcf;
@@ -387,7 +382,7 @@ span.ennemy, div.ennemy {
   -o-box-shadow: inset 0px 0px 100px 2px #96b5f9;
   box-shadow: inset 0px 0px 100px 2px #96b5f9;
   filter:progid:DXImageTransform.Microsoft.Shadow(color=#96b5f9, Direction=NaN, Strength=50);
-  background: none repeat scroll 0 0 rgba(18, 51, 128, 0.7) !important;
+  background: none repeat scroll 0 0 rgba(18, 51, 128, 0.9) !important;
 }
 
 #colorbox.popininfo.loading #cboxContent { 
@@ -396,7 +391,14 @@ span.ennemy, div.ennemy {
 
 #colorbox.popininfo #cboxContent #cboxLoadedContent {
   padding: 20px;
-  padding-top: 70px;
+  padding-top: 80px;
+  font-size: 12px;
+  color: #cccccc;
+}
+
+#colorbox.popininfo #cboxContent #cboxLoadedContent .alert {
+  color: red;
+  text-align: center;
 }
 
 #colorbox.popininfo #cboxContent #cboxTitle {
@@ -408,6 +410,9 @@ span.ennemy, div.ennemy {
   display: block;
   height: 30px;  
   color: #FFA500;
+  padding-bottom: 10px;
+  /*width: 300px;
+  display: inline-block;  */
 }
 
 #cboxLoadingOverlay{ 
@@ -418,14 +423,19 @@ span.ennemy, div.ennemy {
   display:none;
 }
 
-#colorbox.popininfo .prevEntity, #colorbox.popininfo .nextEntity {
+#colorbox.popininfo .prevEntity, #colorbox.popininfo .nextEntity, #colorbox.popininfo .parentEntity {
   cursor: pointer;
   border-radius: 5px;
   width: 32px;
   height: 32px;
+  -moz-box-shadow: inset 0px 0px 5px 0px #FFA500;
+  -webkit-box-shadow: inset 0px 0px 5px 0px#FFA500;
+  -o-box-shadow: inset 0px 0px 5px 0px #FFA500;
+  box-shadow: inset 0px 0px 5px 0px #FFA500;
+  filter:progid:DXImageTransform.Microsoft.Shadow(color=#FFA500, Direction=NaN, Strength=5);
 }
 
-#colorbox.popininfo .prevEntity:hover, #colorbox.popininfo .nextEntity:hover {
+#colorbox.popininfo .prevEntity:hover, #colorbox.popininfo .nextEntity:hover, #colorbox.popininfo .parentEntity:hover {
   -moz-box-shadow: inset 0px 0px 10px 2px #FFA500;
   -webkit-box-shadow: inset 0px 0px 10px 2px #FFA500;
   -o-box-shadow: inset 0px 0px 10px 2px #FFA500;
@@ -438,6 +448,24 @@ span.ennemy, div.ennemy {
   top: -8px;
   margin-left: 15px;
   margin-right: 15px;
+}
+
+#colorbox.popininfo #cboxContent .entityImageWrapper {
+  text-align: center;
+}
+
+#colorbox.popininfo #cboxContent .entityImage {
+  -webkit-animation: rotating-function 240s ease infinite; 
+     -moz-animation: rotating-function 240s ease infinite; 
+      -ms-animation: rotating-function 240s ease infinite; 
+       -o-animation: rotating-function 240s ease infinite; 
+          animation: rotating-function 240s ease infinite;
+  border-width: 3px solid grey; 
+  -moz-box-shadow: 0px 0px 30px 2px #96b5f9;
+  -webkit-box-shadow: 0px 0px 30px 2px #96b5f9;
+  -o-box-shadow: 0px 0px 30px 2px #96b5f9;
+  box-shadow: 0px 0px 30px 2px #96b5f9;
+  border-radius: 500px;
 }
 
 /*-------- Animations ------------*/
