--- a/css/map.css
+++ b/css/map.css
@@ -437,7 +437,7 @@ span.ennemy, div.ennemy {
   display:none;
 }
 
-#colorbox.popininfo .prevEntity, #colorbox.popininfo .nextEntity, #colorbox.popininfo .parentEntity {
+#colorbox.popininfo .prevEntity, #colorbox.popininfo .nextEntity, #colorbox.popininfo .parentEntity, #colorbox.popininfo .parentEntity {
   cursor: pointer;
   border-radius: 5px;
   width: 32px;
@@ -462,6 +462,17 @@ span.ennemy, div.ennemy {
   top: -8px;
   margin-left: 15px;
   margin-right: 15px;
+  width: 270px;
+  height: 22px;
+  overflow: hidden;
+  display: inline-block;
+  white-space: nowrap;  
+}
+
+#colorbox.popininfo #cboxTitle .title .showLongTitle {
+  color: white;
+  cursor: pointer;
+  font-size: 15px;
 }
 
 #colorbox.popininfo #cboxContent .entityImageWrapper {
